2010-03-07 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c,
	  support/regression/tests/float_single.c:
	  gbz80 port regression test fixes.

2010-03-06 Borut Razem <borut.razem AT siol.net>

	* src/hc08/main.c: fixed hc08 target:
	  reintroduced MODAL_SMALL and MODEL_LARGE

2010-03-04 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/port.h, src/avr/main.c, src/ds390/main.c,
	  src/hc08/main.c, src/mcs51/main.c, src/pic16/main.c, src/pic/main.c,
	  src/xa51/main.c, src/z80/main.c: get_model() moved to the traget
	* src/mcs51/rtrack.c: removed MSVC warnings:
	  integral size mismatch in argument; conversion supplied
	* src/SDCCglobl.h: introduced NO_MODEL

2010-03-03 Borut Razem <borut.razem AT siol.net>

	* all.dsp: added makebin to project
	* src/SDCCmain.c: fixed lib suffix,
	  get_lib_suffix() renamed to get_model(),
	  added pic* handling to get_model()

2010-03-02 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/pic/main.c, src/pic16/main.c:
	  lib suffix is a part of lib dir set
	* support/scripts/Makefile.in, support/scripts/clean.mk:
	  added clean Makefile target for scripts

2010-03-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c(get_lib_suffix): added huge model

2010-02-26 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/scripts/as2gbmap.py:
	  use pre-python 2.6 exceptin handling syntax

2010-02-25 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, Makefile.in, support/scripts/Makefile.in:
	  "compile" as2gbmap.py: copy it to bin/as2gbmap and make it executable
	* support/scripts/sdcc.nsi: include bin/as2gbmap.cmd to the package

2010-02-24 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/scripts/as2gbmap.py:
	  sort symbols by value for rrgb outout,
	  handle file open errors
	* doc/sdccman.lyx: documented changed library format to ar in 2.9.0;
	  documented makebin and as2gbmap.py

2010-02-23 Borut Razem <borut.razem AT siol.net>
